--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha test/test-planets.js"
+    "test": "nyc mocha"
+
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.7.4",
     "morgan": "^1.7.0",
+    "nyc": "^11.2.1",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "passport-jwt": "^2.2.1"
