--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "nyc mocha"
+    "test": "nyc mocha test/test-planets.js"
 
   },
   "keywords": [],
