added instanbul coverage to .gitignore, small to change to code in planets.router.js, added test line for instsanbul in package json, created 2 new tests for planets endpoint

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha test/test-planets.js"
+    "test": "mocha test/test-planets.js",
+    "instanbul": "nyc --reporter=html mocha test/test-planets.js"
   },
   "keywords": [],
   "author": "",
